--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Viikko10uusi"
         tools:targetApi="31">
         <activity
-            android:name=".ListUserInRecycleViewActivity"
+            android:name=".ListUserActivity"
             android:exported="false" />
         <activity
             android:name=".AddUserActivity"
